samples/_failures_safe/1761789558_a8b69f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de0bcf03.c: In function ‘tokenize’:
./samples/SAFE/__tmp_de0bcf03.c:153:13: error: expected declaration or statement at end of input
  153 |             tokens[token_count] = token;
      |             ^~~~~~
./samples/SAFE/__tmp_de0bcf03.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de0bcf03.c:153:13: error: expected declaration or statement at end of input
